; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/mediatek/extr_mtk-pmic-wrap.c_pwrap_writel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/mediatek/extr_mtk-pmic-wrap.c_pwrap_writel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmic_wrapper = type { %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pmic_wrapper*, i32, i32)* @pwrap_writel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pwrap_writel(%struct.pmic_wrapper* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.pmic_wrapper*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.pmic_wrapper* %0, %struct.pmic_wrapper** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.pmic_wrapper*, %struct.pmic_wrapper** %4, align 8
  %9 = getelementptr inbounds %struct.pmic_wrapper, %struct.pmic_wrapper* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.pmic_wrapper*, %struct.pmic_wrapper** %4, align 8
  %12 = getelementptr inbounds %struct.pmic_wrapper, %struct.pmic_wrapper* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64*, i64** %14, align 8
  %16 = load i32, i32* %6, align 4
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds i64, i64* %15, i64 %17
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %10, %19
  %21 = call i32 @writel(i32 %7, i64 %20)
  ret void
}

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
